--- a/Lab6/spinedace_Lab6.ipynb
+++ b/Lab6/spinedace_Lab6.ipynb
@@ -89,7 +89,7 @@
         "        L = L @ lam\n",
         "    return L, u"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -114,7 +114,7 @@
         "\n",
         "np.linalg.matrix_rank(A)"
       ],
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -140,7 +140,7 @@
       "source": [
         "np.round(A,3)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -177,7 +177,7 @@
         "# Quick sanity check: L times U must equal the original matrix, up to floating-point errors.\n",
         "print(np.round(L@U - A,3))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,7 +234,7 @@
         "A1 = A.copy()\n",
         "A1[1, 1] = 3"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -249,7 +249,7 @@
         "id": "TRC3nCQCkISv",
         "outputId": "4273be68-25c3-46d8-e6ed-4fb7220a8251"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +280,7 @@
       "source": [
         "np.linalg.matrix_rank(A1)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -308,7 +308,7 @@
         "\n",
         "print(L, U)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,7 +386,7 @@
         "id": "npXQN18nyHS_",
         "outputId": "cce8d977-8ac4-4316-9ee3-006cddf8c656"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -454,7 +454,7 @@
         "id": "U31oKbCWzKXe",
         "outputId": "6e9608c1-c5b6-40d7-fba6-927533ce181f"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,7 +537,7 @@
         "\n",
         "leading_minors_test(A), leading_minors_test(A1)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -661,8 +661,26 @@
         "        L = L @ lam\n",
         "    return P.T, L, u"
       ],
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note. The code returns the inverse of the P matrix. So the formula would be $A=PLU$. For $P$ in $PA=LU$ it is enough to obtain the inverse of the $P$ in code."
+      ],
+      "metadata": {
+        "id": "hTyXJ4tizAeW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Matrix reconstruction"
+      ],
+      "metadata": {
+        "id": "I2nZp7wVy0QX"
+      }
     },
     {
       "cell_type": "code",
@@ -692,7 +710,7 @@
         "id": "PwHvsLWg5XdX",
         "outputId": "25da4e9c-386a-4c46-b556-9dd8c3dd7bf4"
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -757,7 +775,7 @@
         "# Quick sanity check: L times U must equal the original matrix, up to floating-point errors.\n",
         "print(\"L@u - A\\n\",np.round(P@L@U-A,3), \"\\n\")"
       ],
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -822,7 +840,7 @@
         "id": "KY0N7EG_xAaP",
         "outputId": "541443fe-01e4-48d0-9c65-46e2aabd3fda"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -891,7 +909,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -978,7 +996,7 @@
         "id": "acLrGb5y4aZl",
         "outputId": "61d88437-4635-456a-9361-94a1b48e2c7e"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1065,7 +1083,7 @@
         "# Quick sanity check: L times U must equal the original matrix, up to floating-point errors.\n",
         "print(\"L@u - A\\n\",np.round(P@L@U-A,3), \"\\n\")"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1152,7 +1170,7 @@
         "id": "6odsHUNwqGzD",
         "outputId": "99b7d2bb-7ea0-41d8-896e-c238254c6883"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
